Add support for Jetty instead of Tomcat